.provarCaches/00D5f000005vwGkEAI/objects/rstkf__vendorcrapp__c.object
<CustomObject>
    <description>vendorcrapp__c ; This is temporary table used for vendor credit application report or query execution.</description>
    <fields>
        <fullName>rstkf__vendorcrapp_agreemntdata__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Agreement Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_allcurr__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, all currency types will be displayed for items selected (Home Currency, Maintenance Currency, Pay Currency)</inlineHelpText>
        <label>Show All Currencies For Selected Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_apinvtxn_docno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payable Document Number</label>
        <referenceTo>rstkf__apinvtxn__c</referenceTo>
        <relationshipLabel>Vendor Credit Applications (Payable Document Number)</relationshipLabel>
        <relationshipName>vendorcrapps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_apinvtxn_tranId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payable Transaction ID</label>
        <referenceTo>rstkf__apinvtxn__c</referenceTo>
        <relationshipLabel>Vendor Credit Applications</relationshipLabel>
        <relationshipName>vendorcrapps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_beyonddtrange__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, date parameters entered at top of page will not be enforced</inlineHelpText>
        <label>Stray Beyond Date Range</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_cmpno__c</fullName>
        <label>Company Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_enddate__c</fullName>
        <inlineHelpText>Enter the latest date you wish to include for pulling up Vendor Credits.  Note that either a Start Date, End Date or both are needed in order for the filters below to behave properly.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_filterallgainloss__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, all applicable applications resulting in a gain or loss will be retrieved (posted and unposted).</inlineHelpText>
        <label>Include All Gains/Losses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_filterapitem__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the Trans ID &amp; Doc # list boxes are enabled &amp; populated with applicable items. Click on desired item, or if multiples are desired, hold down the shift or control key &amp; select. Click &apos;Generate Vendor Credit Report&apos; button to retrieve records.</inlineHelpText>
        <label>Filter By AP Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_filterbookedgainloss__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, only &quot;posted&quot; applicable applications resulting in a gain or loss will be retrieved.</inlineHelpText>
        <label>Include Booked Gains/Losses Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_filterbycurr__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the &apos;Document Currency&apos; list box is enabled &amp; populated with applicable currencies. Click on desired currency, or if multiples are desired, hold down control key &amp; select. Click on &apos;Generate Vendor Credit Report&apos; button to retrieve records.</inlineHelpText>
        <label>Filter on Document Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_filterbynonpo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, will retrieve all Vendor Invoices and Vendor Debits not associated with a PO when &apos;Generate Vendor Credit Report&apos; is clicked on</inlineHelpText>
        <label>Non PO-Specific Item Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_filterbypo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the &apos;Purchase Orders&apos; list box is enabled &amp; populated with applicable POs. Click on desired PO, or if multiples are desired, hold down the shift or control key &amp; select. Click on &apos;Generate Vendor Credit Report&apos; button to retrieve records.</inlineHelpText>
        <label>Filter By PO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_filtergainloss__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, will retrieve applicable application records that resulted in a gain or loss when &apos;Generate Vendor Credit Report&apos; is clicked. Note that &apos;Include All Gains/Losses&apos; and &apos;Include Booked Gains/Losses Only&apos; checkboxes become enabled when selected</inlineHelpText>
        <label>Filter By Gain/Loss</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_filteronvendor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the &apos;Vendors&apos; list box is enabled &amp; populated with applicable Vendors. Click on desired Vendor, or if multiples are desired, hold down the shift or control key &amp; select. Click on &apos;Generate Vendor Credit Report&apos; button to retrieve records.</inlineHelpText>
        <label>Filter By Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_gainlossdata__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, applicable currency exchange gain and/or loss information will be displayed</inlineHelpText>
        <label>Show Gain/Loss Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_homecurr__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, amounts will be in Home Currency regardless of the transaction/maintenance currency</inlineHelpText>
        <label>Show Home Currency Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_ignorebookedscope__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, Gain/Loss filtering criteria defined in upper section can be ignored where warranted by other selection criteria.</inlineHelpText>
        <label>Ignore Booked Gain/Loss Restrict Scope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_ignorescope__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, Gain/Loss filtering criteria defined in upper section can be ignored where warranted by other selection criteria.</inlineHelpText>
        <label>Ignore Gain/Loss Restriction Scope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_podata__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, PO Header information will be displayed when applicable</inlineHelpText>
        <label>Show PO Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_polinedata__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, PO Line information will be displayed when applicable</inlineHelpText>
        <label>Show PO Line Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_poreceiptdata__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, PO Receipt information will be displayed when applicable</inlineHelpText>
        <label>Show PO Receipt Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_showdrmemo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, when report is printed, the Invoice or Vendor Debit against which a credit was applied will be displayed</inlineHelpText>
        <label>Show Invoice DR Memo Side of Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_showvendorside__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, when report is printed, the Vendor Credit that has been applied will be displayed</inlineHelpText>
        <label>Show Vendor Credit Side of Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_specapitempo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, combination PO and &quot;specified&quot; AP Items parameters entered above will not be strictly enforced for the specified PO(s) where warranted by other selection criteria.</inlineHelpText>
        <label>Stray Beyond Specified AP Item Within PO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_speccurr__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, currency parameters entered above will not be strictly enforced where warranted by other selection criteria.</inlineHelpText>
        <label>Stray Beyond Specified Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_specpolines__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, PO Line parameters entered above will not be strictly enforced where warranted by other selection criteria.</inlineHelpText>
        <label>Stray Beyond Specified PO Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_specpos__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, PO parameters entered above will not be strictly enforced where warranted by other selection criteria.</inlineHelpText>
        <label>Stray Beyond Specified POs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_specreceipt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, Receipt parameters entered above will not be strictly enforced where warranted by other selection criteria.</inlineHelpText>
        <label>Stray Beyond Specified Receipts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_startdate__c</fullName>
        <inlineHelpText>Enter the earliest date you wish to include for pulling up Vendor Credits.  Note that either a Start Date, End Date or both are needed in order for the filters below to behave properly.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_usrno__c</fullName>
        <label>User Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_vendno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipLabel>Vendor Credit Applications</relationshipLabel>
        <relationshipName>vendorcrapps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vendor Credit Application</label>
    <listViews>
        <fullName>rstkf__RS_Vendor_Credit_Applications</fullName>
        <columns>NAME</columns>
        <columns>rstkf__vendorcrapp_cmpno__c</columns>
        <columns>rstkf__vendorcrapp_vendno__c</columns>
        <columns>rstkf__vendorcrapp_apinvtxn_tranId__c</columns>
        <columns>rstkf__vendorcrapp_apinvtxn_docno__c</columns>
        <columns>rstkf__vendorcrapp_startdate__c</columns>
        <columns>rstkf__vendorcrapp_enddate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Vendor Credit Applications</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Vendor_Credit_Applications_Filtered</fullName>
        <columns>NAME</columns>
        <columns>rstkf__vendorcrapp_cmpno__c</columns>
        <columns>rstkf__vendorcrapp_vendno__c</columns>
        <columns>rstkf__vendorcrapp_apinvtxn_tranId__c</columns>
        <columns>rstkf__vendorcrapp_apinvtxn_docno__c</columns>
        <columns>rstkf__vendorcrapp_startdate__c</columns>
        <columns>rstkf__vendorcrapp_enddate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Vendor Credit Applications - Filtered</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Credit Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>